fixed margin issue on .row causing white space

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -3,8 +3,8 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .row {
-	margin-left: 0px;
-        margin-right: 0px;
+	margin-left: 0px !important;
+    margin-right: 0px !important;
 }
 
 .btn-primary {
